fit_predictor/tsp_gls/evaluates/total/round1-reevo-desc/run3/2024-12-23_11-16-04/problem_iter5_response6.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 10, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 10
    degree heuristic = np.sum(distance_matrix, axis=1)
           ^^^^^^^^^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 12, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 10
    degree heuristic = np.sum(distance_matrix, axis=1)
           ^^^^^^^^^
SyntaxError: invalid syntax
